--- a/blog/Views/Admin/Blog.cshtml
+++ b/blog/Views/Admin/Blog.cshtml
@@ -1,8 +1,56 @@
-﻿
+﻿@using blog.Models
+@model List<Blog>
+
 @{
     ViewData["Title"] = "Blog";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Blog</h1>
+<div class="wrapper style1 first">
+    <article class="container" id="top">
+        <div class="row">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Id</th>
+                        <th scope="col">Başlık</th>
+                        <th scope="col">Tarih</th>
+                        <th scope="col">Konu</th>
+                        <th scope="col">Açıklama</th>
+                        <th scope="col">Resim</th>
+                        <th scope="col">Kategori No</th>
+                        <th scope="col">Popüler</th>
+                        <th scope="col">Trend</th>
+                        <th scope="col">Düzenle</th>
+                        <th scope="col">Sil</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var x in Model)
+                    {
+                        <tr>
+                            <th scope="row">#</th>
+                            <td>@x.Id</td>
+                            <td>@x.Baslik</td>
+                            <td>@x.Tarih</td>
+                            <td>@x.Konu</td>
+                            <td>@x.Description</td>
+                            <td><img src="~/Resimler/Blog/@x.ResimYol" style="width:20%;" /></td>
+                            <td>@x.CategoryBaslik</td>
+                            <td>@x.Popular</td>
+                            <td>@x.Trend</td>
 
+                            <td>
+                                <a class="btn btn-primary" href="/Admin/BlogDuzenle/@x.Id" role="button">Düzenle</a>
+                            </td>
+                            <td>
+                                <a class="btn btn-primary" href="/Admin/BlogSil/@x.Id" role="button">Sil</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </article>
+</div>
