--- a/blog/Views/Admin/CategoryUpdate.cshtml
+++ b/blog/Views/Admin/CategoryUpdate.cshtml
@@ -1,8 +1,40 @@
-﻿
+﻿@using blog.Models
+@model Category
+
 @{
     ViewData["Title"] = "CategoryUpdate";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>CategoryUpdate</h1>
-
+<form action="/Admin/CategoryUpdate" method="post" enctype="multipart/form-data">
+    <div class="form-group">
+        <label>Id</label>
+        <input type="text" class="form-control" value="@Model.Id" name="CategoryId" readonly />
+    </div>
+    <div class="form-group">
+        <label>Kategori İsmi</label>
+        <input type="text" class="form-control" value="@Model.Baslik" name="CategoryName" />
+    </div>
+    <div class="form-group">
+        <label>Kategori Açıklaması</label>
+        <input type="text" class="form-control" value="@Model.Description" name="CategoryDescription" />
+    </div>
+    <div class="form-group row pb-4">
+        <label class="col-lg-3 control-label text-lg-end pt-2"></label>
+        <div class="col-lg-6">
+            <div class="fileupload fileupload-new" data-provides="fileupload">
+                <div class="input-append">
+                    <div class="uneditable-input">
+                        <i class="fas fa-file fileupload-exists"></i>
+                        <span class="fileupload-preview"></span>
+                    </div>
+                    <span class="btn btn-default btn-file">
+                        <span class="fileupload-new">Dosyayı Seçiniz</span>
+                        <input type="file" name="Resim" required />
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary" value="kaydet">Kaydet</button>
+</form>
