--- a/blog/Views/User/Bloglarim.cshtml
+++ b/blog/Views/User/Bloglarim.cshtml
@@ -1,8 +1,65 @@
-﻿
+﻿@using blog.Models
+@model List<Blog>
+
 @{
     ViewData["Title"] = "Bloglarim";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
-<h1>Bloglarim</h1>
+<div>
+    <!-- start: sidebar -->
+    <!-- end: sidebar -->
+    <section role="main" class="content-body content-body-modern mt-0">
+        <header class="page-header page-header-left-inline-breadcrumb">
+            <h2 class="font-weight-bold text-6">Blog Listesi</h2>
+        </header>
+        <div class="wrapper style1 first">
+            <article class="container" id="top">
+                <div class="row">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Id</th>
+                                <th scope="col">Başlık</th>
+                                <th scope="col">Tarih</th>
+                                <th scope="col">Konu</th>
+                                <th scope="col">Açıklama</th>
+                                <th scope="col">Resim</th>
+                                <th scope="col">Kategori No</th>
+                                <th scope="col">Popüler</th>
+                                <th scope="col">Trend</th>
+                                <th scope="col">Düzenle</th>
+                                <th scope="col">Sil</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var x in Model)
+                            {
+                                <tr>
+                                    <th scope="row">#</th>
+                                    <td>@x.Id</td>
+                                    <td>@x.Baslik</td>
+                                    <td>@x.Tarih</td>
+                                    <td>@x.Konu</td>
+                                    <td>@x.Description</td>
+                                    <td><img src="~/Resimler/Blog/@x.ResimYol" style="width:20%;" /></td>
+                                    <td>@x.CategoryBaslik</td>
+                                    <td>@x.Popular</td>
+                                    <td>@x.Trend</td>
 
+                                    <td>
+                                        <a class="btn btn-primary" href="/User/BlogDuzenle/@x.Id" role="button">Düzenle</a>
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-primary" href="/User/BlogSil/@x.Id" role="button">Sil</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </article>
+        </div>
+    </section>
+</div>
