Çoklu Resim Eklendi.

--- a/blog/Views/Admin/BlogDuzenle.cshtml
+++ b/blog/Views/Admin/BlogDuzenle.cshtml
@@ -50,7 +50,7 @@
                                 </div>
                                 <span class="btn btn-default btn-file">
                                     <span class="fileupload-new">Dosyayı Seçiniz</span>
-                                    <input type="file" name="Resim" required />
+                                    <input type="file" multiple="true" name="Resim" required />
                                 </span>
                             </div>
                         </div>
