--- a/blog/Views/User/BlogEkle.cshtml
+++ b/blog/Views/User/BlogEkle.cshtml
@@ -46,7 +46,7 @@
                                 </div>
                                 <span class="btn btn-default btn-file">
                                     <span class="fileupload-new">Dosyayı Seçiniz</span>
-                                    <input type="file" name="Resim" required />
+                                    <input type="file" multiple="true" name="Resim" required />
                                 </span>
                             </div>
                         </div>
