--- a/blog/Views/Admin/Profilim.cshtml
+++ b/blog/Views/Admin/Profilim.cshtml
@@ -8,11 +8,13 @@
 <section class="body">
     <div class="inner-wrapper">
         <section role="main" class="content-body card-margin">
+            <header class="page-header page-header-left-inline-breadcrumb">
+                <h2 class="font-weight-bold text-6">Profilim</h2>
+            </header>
 
-            <!-- start: page -->
             <div class="row">
                 <div class="col">
-                    <section class="card" style="top:-155px">
+                    <section class="card" style="top:-95px">
                         <div class="card-body">
                             <div class="form-group row pb-4">
                                 <label class="col-lg-3 control-label text-lg-end pt-2">Adı Soyadı: </label>
@@ -60,6 +62,12 @@
                                 <label class="col-lg-3 control-label text-lg-end pt-2">Şifre: </label>
                                 <div class="col-lg-6">
                                     <input type="password" class="form-control" name="password" value="">
+                                </div>
+                            </div>
+
+                            <div class="form-group row pb-4">
+                                <div class="col-lg-6" style="text-align:center;">
+                                    <label class="col-lg-3 control-label text-lg-end pt-2"><a href="/Admin/ProfilDuzenle" class="btn btn-dark btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1">Profil Düzenle</a></label>
                                 </div>
                             </div>
                         </div>
