--- a/blog/Views/Shared/_AdminLayout.cshtml
+++ b/blog/Views/Shared/_AdminLayout.cshtml
@@ -72,7 +72,7 @@
                 <div id="userbox" class="userbox">
                     <a href="#" data-bs-toggle="dropdown">
                         <div class="profile-info profile-info-no-role">
-                            <h5>isim</h5>
+                            @await Component.InvokeAsync("AdminKullaniciAdiListele")
                         </div>
                         <i class="fas fa-chevron-down text-color-dark"></i>
                     </a>
@@ -118,7 +118,7 @@
                                     <ul class="nav nav-children">
                                         <li>
                                             <a class="nav-link" href="/Admin/Blog">
-                                                - Bloglarım
+                                                - Bloglar
                                             </a>
                                         </li>
                                         <li>
