user paneline başlandı.

--- a/blog/Views/Shared/_UserLayout.cshtml
+++ b/blog/Views/Shared/_UserLayout.cshtml
@@ -73,7 +73,7 @@
                 <div id="userbox" class="userbox">
                     <a href="#" data-bs-toggle="dropdown">
                         <div class="profile-info profile-info-no-role">
-                            <h5>isim</h5>
+                            @await Component.InvokeAsync("AdminKullaniciAdiListele")
                         </div>
                         <i class="fas fa-chevron-down text-color-dark"></i>
                     </a>
