--- a/blog/Views/Admin/CategoryUpdate.cshtml
+++ b/blog/Views/Admin/CategoryUpdate.cshtml
@@ -16,15 +16,15 @@
         <form action="/Admin/CategoryUpdate" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label>Id</label>
-                <input type="text" class="form-control" value="@Model.Id" name="CategoryId" readonly />
+                <input type="text" class="form-control" value="@Model.Id" name="Id" />
             </div>
             <div class="form-group">
                 <label>Kategori İsmi</label>
-                <input type="text" class="form-control" value="@Model.Baslik" name="CategoryName" />
+                <input type="text" class="form-control" value="@Model.Baslik" name="Baslik" />
             </div>
             <div class="form-group">
                 <label>Kategori Açıklaması</label>
-                <input type="text" class="form-control" value="@Model.Description" name="CategoryDescription" />
+                <input type="text" class="form-control" value="@Model.Description" name="Description" />
             </div>
             <div class="form-group row pb-4">
                 <label class="col-lg-3 control-label text-lg-end pt-2"></label>
