--- a/blog/Views/Home/Index.cshtml
+++ b/blog/Views/Home/Index.cshtml
@@ -4,197 +4,25 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container-fluid py-3">
-    <div class="container">
-        <div class="owl-carousel owl-carousel-2 carousel-item-3 position-relative">
-            <div class="d-flex">
-                <img src="~/img/news-100x100-1.jpg" style="width: 80px; height: 80px; object-fit: cover;">
-                <div class="d-flex align-items-center bg-light px-3" style="height: 80px;">
-                    <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                </div>
-            </div>
-            <div class="d-flex">
-                <img src="~/img/news-100x100-2.jpg" style="width: 80px; height: 80px; object-fit: cover;">
-                <div class="d-flex align-items-center bg-light px-3" style="height: 80px;">
-                    <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                </div>
-            </div>
-            <div class="d-flex">
-                <img src="~/img/news-100x100-3.jpg" style="width: 80px; height: 80px; object-fit: cover;">
-                <div class="d-flex align-items-center bg-light px-3" style="height: 80px;">
-                    <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                </div>
-            </div>
-            <div class="d-flex">
-                <img src="~/img/news-100x100-4.jpg" style="width: 80px; height: 80px; object-fit: cover;">
-                <div class="d-flex align-items-center bg-light px-3" style="height: 80px;">
-                    <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Top News Slider End -->
-<!-- Main News Slider Start -->
+            
 <div class="container-fluid py-3">
     <div class="container">
         <div class="row">
             <div class="col-lg-8">
                 <div class="owl-carousel owl-carousel-2 carousel-item-1 position-relative mb-3 mb-lg-0">
-                    <div class="position-relative overflow-hidden" style="height: 435px;">
-                        <img class="img-fluid h-100" src="~/img/news-700x435-1.jpg" style="object-fit: cover;">
-                        <div class="overlay">
-                            <div class="mb-1">
-                                <a class="text-white" href="">Technology</a>
-                                <span class="px-2 text-white">/</span>
-                                <a class="text-white" href="">January 01, 2045</a>
-                            </div>
-                            <a class="h2 m-0 text-white font-weight-bold" href="">Sanctus amet sed amet ipsum lorem. Dolores et erat et elitr sea sed</a>
-                        </div>
-                    </div>
-                    <div class="position-relative overflow-hidden" style="height: 435px;">
-                        <img class="img-fluid h-100" src="~/img/news-700x435-2.jpg" style="object-fit: cover;">
-                        <div class="overlay">
-                            <div class="mb-1">
-                                <a class="text-white" href="">Technology</a>
-                                <span class="px-2 text-white">/</span>
-                                <a class="text-white" href="">January 01, 2045</a>
-                            </div>
-                            <a class="h2 m-0 text-white font-weight-bold" href="">Sanctus amet sed amet ipsum lorem. Dolores et erat et elitr sea sed</a>
-                        </div>
-                    </div>
+                    @await Component.InvokeAsync("SliderOne")
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="d-flex align-items-center justify-content-between bg-light py-2 px-4 mb-3">
-                    <h3 class="m-0">Categories</h3>
-                    <a class="text-secondary font-weight-medium text-decoration-none" href="">View All</a>
+                    <h3 class="m-0">Kategoriler</h3>
                 </div>
-                <div class="position-relative overflow-hidden mb-3" style="height: 80px;">
-                    <img class="img-fluid w-100 h-100" src="~/img/cat-500x80-1.jpg" style="object-fit: cover;">
-                    <a href="" class="overlay align-items-center justify-content-center h4 m-0 text-white text-decoration-none">
-                        Business
-                    </a>
-                </div>
-                <div class="position-relative overflow-hidden mb-3" style="height: 80px;">
-                    <img class="img-fluid w-100 h-100" src="~/img/cat-500x80-2.jpg" style="object-fit: cover;">
-                    <a href="" class="overlay align-items-center justify-content-center h4 m-0 text-white text-decoration-none">
-                        Technology
-                    </a>
-                </div>
-                <div class="position-relative overflow-hidden mb-3" style="height: 80px;">
-                    <img class="img-fluid w-100 h-100" src="~/img/cat-500x80-3.jpg" style="object-fit: cover;">
-                    <a href="" class="overlay align-items-center justify-content-center h4 m-0 text-white text-decoration-none">
-                        Entertainment
-                    </a>
-                </div>
-                <div class="position-relative overflow-hidden" style="height: 80px;">
-                    <img class="img-fluid w-100 h-100" src="~/img/cat-500x80-4.jpg" style="object-fit: cover;">
-                    <a href="" class="overlay align-items-center justify-content-center h4 m-0 text-white text-decoration-none">
-                        Sports
-                    </a>
-                </div>
+                @await Component.InvokeAsync("CategoryListOne")
             </div>
         </div>
     </div>
 </div>
 
-<div class="container-fluid py-3">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="row mb-3">
-                    <div class="col-12">
-                        <div class="d-flex align-items-center justify-content-between bg-light py-2 px-4 mb-3">
-                            <h3 class="m-0">Popular</h3>
-                            <a class="text-secondary font-weight-medium text-decoration-none" href="">View All</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="d-flex mb-3">
-                            <img src="~/img/news-100x100-1.jpg" style="width: 100px; height: 100px; object-fit: cover;">
-                            <div class="w-100 d-flex flex-column justify-content-center bg-light px-3" style="height: 100px;">
-                                <div class="mb-1" style="font-size: 13px;">
-                                    <a href="">Technology</a>
-                                    <span class="px-1">/</span>
-                                    <span>January 01, 2045</span>
-                                </div>
-                                <a class="h6 m-0" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                            </div>
-                        </div>
-                        <div class="d-flex mb-3">
-                            <img src="~/img/news-100x100-2.jpg" style="width: 100px; height: 100px; object-fit: cover;">
-                            <div class="w-100 d-flex flex-column justify-content-center bg-light px-3" style="height: 100px;">
-                                <div class="mb-1" style="font-size: 13px;">
-                                    <a href="">Technology</a>
-                                    <span class="px-1">/</span>
-                                    <span>January 01, 2045</span>
-                                </div>
-                                <a class="h6 m-0" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="d-flex mb-3">
-                            <img src="~/img/news-100x100-3.jpg" style="width: 100px; height: 100px; object-fit: cover;">
-                            <div class="w-100 d-flex flex-column justify-content-center bg-light px-3" style="height: 100px;">
-                                <div class="mb-1" style="font-size: 13px;">
-                                    <a href="">Technology</a>
-                                    <span class="px-1">/</span>
-                                    <span>January 01, 2045</span>
-                                </div>
-                                <a class="h6 m-0" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                            </div>
-                        </div>
-                        <div class="d-flex mb-3">
-                            <img src="~/img/news-100x100-4.jpg" style="width: 100px; height: 100px; object-fit: cover;">
-                            <div class="w-100 d-flex flex-column justify-content-center bg-light px-3" style="height: 100px;">
-                                <div class="mb-1" style="font-size: 13px;">
-                                    <a href="">Technology</a>
-                                    <span class="px-1">/</span>
-                                    <span>January 01, 2045</span>
-                                </div>
-                                <a class="h6 m-0" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 pt-3 pt-lg-0">
-                <div class="pb-3">
-                    <div class="bg-light py-2 px-4 mb-3">
-                        <h3 class="m-0">Tranding</h3>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <img src="~/img/news-100x100-4.jpg" style="width: 100px; height: 100px; object-fit: cover;">
-                        <div class="w-100 d-flex flex-column justify-content-center bg-light px-3" style="height: 100px;">
-                            <div class="mb-1" style="font-size: 13px;">
-                                <a href="">Technology</a>
-                                <span class="px-1">/</span>
-                                <span>January 01, 2045</span>
-                            </div>
-                            <a class="h6 m-0" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <img src="~/img/news-100x100-5.jpg" style="width: 100px; height: 100px; object-fit: cover;">
-                        <div class="w-100 d-flex flex-column justify-content-center bg-light px-3" style="height: 100px;">
-                            <div class="mb-1" style="font-size: 13px;">
-                                <a href="">Technology</a>
-                                <span class="px-1">/</span>
-                                <span>January 01, 2045</span>
-                            </div>
-                            <a class="h6 m-0" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Featured News Slider End -->
-<!-- Category News Slider Start -->
 <div class="container-fluid">
     <div class="container">
         <div class="row">
