--- a/blog/Views/Admin/Index.cshtml
+++ b/blog/Views/Admin/Index.cshtml
@@ -129,7 +129,7 @@
                                                 <div class="summary">
                                                     <h4 class="title">Kullanıcılar</h4>
                                                     <div class="info">
-                                                        <strong class="amount">@ViewBag.uyesayisi</strong>
+                                                        <strong class="amount">@ViewBag.userSayisi</strong>
                                                     </div>
                                                 </div>
                                             </div>
