--- a/blog/Views/Admin/Profilim.cshtml
+++ b/blog/Views/Admin/Profilim.cshtml
@@ -61,13 +61,13 @@
                             <div class="form-group row pb-4">
                                 <label class="col-lg-3 control-label text-lg-end pt-2">Şifre: </label>
                                 <div class="col-lg-6">
-                                    <input type="password" class="form-control" name="password" value="">
+                                    <input type="password" class="form-control" name="password" value="@Model.email" readonly/>
                                 </div>
                             </div>
 
                             <div class="form-group row pb-4">
                                 <div class="col-lg-6" style="text-align:center;">
-                                    <label class="col-lg-3 control-label text-lg-end pt-2"><a href="/Admin/ProfilDuzenle" class="btn btn-dark btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1">Profil Düzenle</a></label>
+                                    <label class="col-lg-3 control-label text-lg-end pt-2"><a href="~/Admin/ProfilDuzenle" class="btn btn-dark btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1">Profil Düzenle</a></label>
                                 </div>
                             </div>
                         </div>
