--- a/blog/Views/Giris/Index.cshtml
+++ b/blog/Views/Giris/Index.cshtml
@@ -6,13 +6,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container pt-5">
+<div style="margin: auto;" class="container pt-5">
 	<div class="container pb-5 pt-5">
 		<div class="container pb-5 pt-5">
 			<div class="container pt-3 pb-2">
 
 				<div class="row pt-2">
-
 					<form id="frmSignIn" method="post" class="needs-validation">
 						<div class="form-group row">
 							<label class="col-lg-3 col-form-label form-control-label line-height-9 pt-2 text-2 required">Kullanıcı Adı</label>
