--- a/blog/Views/Shared/Components/AdminMesaj/Default.cshtml
+++ b/blog/Views/Shared/Components/AdminMesaj/Default.cshtml
@@ -5,7 +5,7 @@
     <div class="datatable-header">
         <div class="row align-items-center mb-3">
             <div class="col-12 col-lg-auto mb-3 mb-lg-0">
-                <h4>Destek Talebi</h4>
+                <h4>Kullanıcı Mesajları</h4>
             </div>
         </div>
     </div>
