--- a/blog/Views/User/Bloglarim.cshtml
+++ b/blog/Views/User/Bloglarim.cshtml
@@ -48,7 +48,7 @@
                                         <a class="btn btn-primary" href="/User/BlogDuzenle/@x.Id" role="button">Düzenle</a>
                                     </td>
                                     <td>
-                                        <a class="btn btn-primary" href="/User/BlogSil/@x.Id" role="button">Sil</a>
+                                        <a class="btn btn-danger" href="/User/BlogSil/@x.Id" role="button">Sil</a>
                                     </td>
                                 </tr>
                             }
