--- a/blog/Views/Kayit/Index.cshtml
+++ b/blog/Views/Kayit/Index.cshtml
@@ -14,7 +14,6 @@
 			</div>
 			<div class="col-lg-10">
 				<div class="col-lg-3 col-form-label form-control-label line-height-9 pb-3 text-2"><h4>Kayıt Ol</h4></div>
-				@ViewBag.hatamesaji
 				<form id="frmSignUp" method="post">
 					<div class="form-group row">
 						<label class="col-lg-3 col-form-label form-control-label line-height-9 pt-2 text-2 required">Ad Soyad</label>
@@ -60,6 +59,9 @@
 						<div class="col-lg-9">
 							<input class="form-control text-3 h-auto py-2" type="password" name="confirmPassword" value="" required="">
 						</div>
+					</div>
+					<div class="form-group row">
+						<h5 class="text-danger">@ViewBag.hatamesaji</h5>
 					</div>
 					<div class="form-group row">
 						<div class="form-group col-lg-9">
