--- a/blog/Views/Shared/Components/SliderOne/Default.cshtml
+++ b/blog/Views/Shared/Components/SliderOne/Default.cshtml
@@ -7,11 +7,11 @@
         <img class="img-fluid h-100" src="~/Resimler/Blog/@a.ResimYol" style="object-fit: cover;">
         <div class="overlay">
             <div class="mb-1">
-                <a class="text-white" href="">@a.Baslik</a>
+                <a class="text-white" href="~/Home/BlogDetay/@a.Id">@a.Baslik</a>
                 <span class="px-2 text-white">/</span>
-                <a class="text-white" href="">@a.Tarih</a>
+                <a class="text-white" href="~/Home/BlogDetay/@a.Id">@a.Tarih</a>
             </div>
-            <a class="h2 m-0 text-white font-weight-bold" href="">@a.Konu</a>
+            <a class="h2 m-0 text-white font-weight-bold" href="~/Home/BlogDetay/@a.Id">@a.Konu</a>
         </div>
     </div>
 }
