--- a/blog/Views/User/MesajKutusu.cshtml
+++ b/blog/Views/User/MesajKutusu.cshtml
@@ -1,8 +1,71 @@
-﻿
+﻿@using blog.Models
+@model AdminMesaj
+
 @{
     ViewData["Title"] = "MesajKutusu";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
-<h1>MesajKutusu</h1>
+<div>
+    <!-- start: sidebar -->
+    <!-- end: sidebar -->
+    <section role="main" class="content-body content-body-modern mt-0">
+        <header class="page-header page-header-left-inline-breadcrumb">
+            <h2 class="font-weight-bold text-6">Destek Talebi Oluştur</h2>
+        </header>
 
+        <!-- start: page -->
+        <form method="post">
+
+            <div class="row">
+                <div class="col">
+                    <section class="card card-modern card-big-info">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-lg-12-9 col-xl-13-7">
+                                    <div class="row">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <div class="form-group row align-items-center mb-3">
+                                                    <label class="col-lg-4 col-xl-2 control-label text-lg-end mb-0">E-Posta</label>
+                                                    <div class="col-lg-11 col-xl-10">
+                                                        <input type="email" class="form-control form-control-modern" name="Mail" required>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row align-items-center mb-3">
+                                                    <label class="col-lg-4 col-xl-2 control-label text-lg-end mb-0">Başlık</label>
+                                                    <div class="col-lg-11 col-xl-10">
+                                                        <input type="text" class="form-control form-control-modern" name="Baslik" required>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row align-items-center mb-3">
+                                                    <label class="col-lg-4 col-xl-2 control-label text-lg-end mb-0">Konu</label>
+                                                    <div class="col-lg-11 col-xl-10">
+                                                        <input type="text" class="form-control form-control-modern" name="Konu" required>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row align-items-center mb-3">
+                                                    <label class="col-lg-4 col-xl-2 control-label text-lg-end pt-2 mt-1 mb-0">Açıklama</label>
+                                                    <div class="col-lg-11 col-xl-10">
+                                                        <input type="text" class="form-control form-control-modern" name="Description" required>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <div class="row action-buttons">
+                <div class="col-12 col-md-auto">
+                    <button type="submit" class="submit-button btn btn-primary btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1" data-loading-text="Loading...">
+                        Kaydet
+                    </button>
+                </div>
+            </div>
+        </form>
+    </section>
+</div>
